logs/fudget.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Fudget-0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/calendar'...
Listing './lib/python3.5/site-packages/calendar/apps'...
Listing './lib/python3.5/site-packages/calendar/apps/homepage'...
Listing './lib/python3.5/site-packages/calendar/apps/registration'...
Listing './lib/python3.5/site-packages/calendar/apps/registration/management'...
Listing './lib/python3.5/site-packages/calendar/apps/registration/management/commands'...
Listing './lib/python3.5/site-packages/calendar/apps/time_spent'...
Compiling './lib/python3.5/site-packages/calendar/apps/time_spent/models.py'...
***   File "./lib/python3.5/site-packages/calendar/apps/time_spent/models.py", line 19
    print self.per_day(num_workdays) / 8.0
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/calendar/apps/time_spent/templatetags'...
Compiling './lib/python3.5/site-packages/calendar/apps/time_spent/views.py'...
***   File "./lib/python3.5/site-packages/calendar/apps/time_spent/views.py", line 140
    print 'work days', num_workdays
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
